argoCD/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkle
spec:
  selector:
    app: linkle
  ports:
    - port: 80
      targetPort: 3000
